[gd_scene load_steps=7 format=3 uid="uid://cm0p2pu0821ay"]

[ext_resource type="Script" uid="uid://bm5h2j3shms13" path="res://Scripts/hiring_menu.gd" id="1_hi4j7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghi2m"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hi4j7"]
bg_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_alc7t"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqkdt"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8784314, 0.8784314, 0.8784314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jw1sn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="HiringMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hi4j7")

[node name="Window" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -450.0
offset_right = 750.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ghi2m")

[node name="MainVBox" type="VBoxContainer" parent="Window"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderPanel" type="Panel" parent="Window/MainVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hi4j7")

[node name="TitleLabel" type="Label" parent="Window/MainVBox/HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -11.5
offset_right = 88.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Найм сотрудников"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Window/MainVBox/HeaderPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -15.0
offset_right = -24.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_alc7t")
text = "X"

[node name="CardsMargin" type="MarginContainer" parent="Window/MainVBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CardsContainer" type="VBoxContainer" parent="Window/MainVBox/CardsMargin"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Card1" type="PanelContainer" parent="Window/MainVBox/CardsMargin/CardsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yqkdt")

[node name="CardInnerMargin" type="MarginContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CardVBox" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopInfoHBox" type="HBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox"]
layout_mode = 2

[node name="LeftInfo" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Иван Иванов"

[node name="RoleLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Junior Dev\","

[node name="SkillLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Backend: 10"

[node name="Spacer" type="Control" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2

[node name="SalaryLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.29803923, 0.6862745, 0.3137255, 1)
theme_override_font_sizes/font_size = 25
text = "3500"

[node name="HireButton" type="Button" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox/TopInfoHBox/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jw1sn")
text = "Нанять"

[node name="Separator" type="HSeparator" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox"]
layout_mode = 2

[node name="TraitsLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card1/CardInnerMargin/CardVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.22352941, 0.20784314, 1)
text = "Особенность: Пьет 5 литров кофе"

[node name="Card2" type="PanelContainer" parent="Window/MainVBox/CardsMargin/CardsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yqkdt")

[node name="CardInnerMargin" type="MarginContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CardVBox" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopInfoHBox" type="HBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox"]
layout_mode = 2

[node name="LeftInfo" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Иван Иванов"

[node name="RoleLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Junior Dev\","

[node name="SkillLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Backend: 10"

[node name="Spacer" type="Control" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2

[node name="SalaryLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.29803923, 0.6862745, 0.3137255, 1)
theme_override_font_sizes/font_size = 25
text = "3500"

[node name="HireButton" type="Button" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox/TopInfoHBox/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jw1sn")
text = "Нанять"

[node name="Separator" type="HSeparator" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox"]
layout_mode = 2

[node name="TraitsLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card2/CardInnerMargin/CardVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.22352941, 0.20784314, 1)
text = "Особенность: Пьет 5 литров кофе"

[node name="Card3" type="PanelContainer" parent="Window/MainVBox/CardsMargin/CardsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yqkdt")

[node name="CardInnerMargin" type="MarginContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CardVBox" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopInfoHBox" type="HBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox"]
layout_mode = 2

[node name="LeftInfo" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Иван Иванов"

[node name="RoleLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Junior Dev\","

[node name="SkillLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox/LeftInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "Backend: 10"

[node name="Spacer" type="Control" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox"]
layout_mode = 2

[node name="SalaryLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.29803923, 0.6862745, 0.3137255, 1)
theme_override_font_sizes/font_size = 25
text = "3500"

[node name="HireButton" type="Button" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox/TopInfoHBox/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jw1sn")
text = "Нанять"

[node name="Separator" type="HSeparator" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox"]
layout_mode = 2

[node name="TraitsLabel" type="Label" parent="Window/MainVBox/CardsMargin/CardsContainer/Card3/CardInnerMargin/CardVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.22352941, 0.20784314, 1)
text = "Особенность: Пьет 5 литров кофе"
